main  fixed a bug where small avatar of the chat was stretched to fit

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -291,6 +291,7 @@ body {
 .avatar-small {
   width: 55px;
   height: 55px;
+  object-fit: cover;
 }
 
 .chat-title {
